--- a/templates/web/base/contactenos.html
+++ b/templates/web/base/contactenos.html
@@ -1,5 +1,5 @@
 <!--Modal: Contact form-->
-<div class="modal fade" id="contactenos_form" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+<div class="modal fade formulario" id="contactenos_form" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
      aria-hidden="true">
     <div class="modal-dialog cascading-modal" role="document">
         <!--Content-->
@@ -14,34 +14,45 @@
             </div>
             <!--Body-->
             <div class="modal-body mb-0">
-                <div class="md-form form-sm">
-                    <i class="fa fa-envelope prefix"></i>
-                    <input type="text" id="form19" class="form-control">
-                    <label for="form19">Nombre</label>
-                </div>
 
-                <div class="md-form form-sm">
-                    <i class="fa fa-lock prefix"></i>
-                    <input type="password" id="form20" class="form-control">
-                    <label for="form20">Correo</label>
-                </div>
+                <form action="{% url 'web:send_contactenos' %}" method="post">
+                    {% csrf_token %}
 
-                <div class="md-form form-sm">
-                    <i class="fa fa-tag prefix"></i>
-                    <input type="text" id="form21" class="form-control">
-                    <label for="form21">Asunto</label>
-                </div>
+                    <div class="md-form form-sm">
+                        <i class="fa fa-envelope prefix"></i>
+                        <input type="text" id="form19" class="form-control">
+                        <label for="form19">Nombre</label>
+                    </div>
 
-                <div class="md-form form-sm">
-                    <i class="fa fa-pencil prefix"></i>
-                    <textarea type="text" id="form8" class="md-textarea mb-0"></textarea>
-                    <label for="form8">Mensaje</label>
-                </div>
+                    <div class="md-form form-sm">
+                        <i class="fa fa-lock prefix"></i>
+                        <input type="password" id="form20" class="form-control">
+                        <label for="form20">Correo</label>
+                    </div>
 
-                <div class="text-center mt-1-half">
-                    <button class="btn mb-2 color-1-odecopack">Enviar <i class="fa fa-send ml-1"></i></button>
-                </div>
+                    <div class="md-form form-sm">
+                        <i class="fa fa-tag prefix"></i>
+                        <input type="text" id="form21" class="form-control">
+                        <label for="form21">Asunto</label>
+                    </div>
 
+                    <div class="md-form form-sm">
+                        <i class="fa fa-pencil prefix"></i>
+                        <textarea type="text" id="form8" class="md-textarea mb-0"></textarea>
+                        <label for="form8">Mensaje</label>
+                    </div>
+                    <div class="options text-center mt-1 texto-legal">
+                        ODECOPACK SAS le informa que los datos personales que se recolectan
+                        a través de este formulario serán tratados de manera segura y confiable de acuerdo
+                        con nuestras políticas y acorde a la Ley 1581 de 2012 sobre protección de Datos.
+
+                    </div>
+
+                    <div class="text-center mt-1-half">
+                        <button type="submit" class="btn mb-2 color-1-odecopack">Enviar <i class="fa fa-send ml-1"></i>
+                        </button>
+                    </div>
+                </form>
             </div>
         </div>
         <!--/.Content-->
