--- a/static/web/css/style.styl
+++ b/static/web/css/style.styl
@@ -245,6 +245,16 @@ hr
         margin-left 0.5rem
         font-style normal
         border-radius (25px)
+  .btn-floating-categoria
+    right 210px
+    font-size 0.8rem
+    border-radius (25px)
+    padding 0.5rem
+    margin 0
+    width 300px !important
+    height 100% !important
+    background-color $odecopack-color_1
+    color white !important
 
 .formulario
   .texto-legal
