Envío de correos desde contactenos y footer. Envío de dos correos, uno de confirmación al cliente y el otro a la empresa.

--- a/static/web/css/style.css
+++ b/static/web/css/style.css
@@ -266,7 +266,7 @@ hr {
 }
 .soluciones .lista .ver_mas {
   position: absolute;
-  right: 10px;
+  left: 10px;
   bottom: 0;
 }
 .soluciones .navbar-soluciones {
