--- a/static/web/css/style.styl
+++ b/static/web/css/style.styl
@@ -230,7 +230,7 @@ hr
       height 100%
     .ver_mas
       position absolute
-      right 10px
+      left 10px
       bottom 0
   .navbar-soluciones
     font-size 0.7rem
