--- a/templates/web/base/contactenos.html
+++ b/templates/web/base/contactenos.html
@@ -20,25 +20,27 @@
 
                     <div class="md-form form-sm">
                         <i class="fa fa-envelope prefix"></i>
-                        <input type="text" id="form19" class="form-control">
+                        <input name="nombre" type="text" id="form19" class="form-control" required>
                         <label for="form19">Nombre</label>
                     </div>
 
                     <div class="md-form form-sm">
-                        <i class="fa fa-lock prefix"></i>
-                        <input type="password" id="form20" class="form-control">
+                        <i class="fa fa-envelope prefix"></i>
+                        <input name="correo" type="email" id="form20" class="form-control" required>
                         <label for="form20">Correo</label>
                     </div>
 
                     <div class="md-form form-sm">
                         <i class="fa fa-tag prefix"></i>
-                        <input type="text" id="form21" class="form-control">
+                        <input name="asunto" type="text" id="form21" class="form-control" required>
                         <label for="form21">Asunto</label>
                     </div>
 
                     <div class="md-form form-sm">
                         <i class="fa fa-pencil prefix"></i>
-                        <textarea type="text" id="form8" class="md-textarea mb-0"></textarea>
+                        <textarea name="texto" style="min-height: 150px" rows="40" type="text" id="form8"
+                                  class="md-textarea mb-0"
+                                  required></textarea>
                         <label for="form8">Mensaje</label>
                     </div>
                     <div class="options text-center mt-1 texto-legal">
