--- a/templates/web/soluciones/item.html
+++ b/templates/web/soluciones/item.html
@@ -51,7 +51,7 @@
         </div>
 
         {% if item.mas %}
-            <div>
+            <div class="ver_mas">
                 <a href="#" class="black-text d-flex flex-row-reverse" data-toggle="modal"
                    data-target="#itemSolucion{{ item.pk }}">
                     <h5 class="waves-effect">Ver más <i class="fa fa-chevron-right"></i></h5>
