--- a/static/web/css/style.styl
+++ b/static/web/css/style.styl
@@ -235,9 +235,7 @@ hr
   .navbar-soluciones
     font-size 0.7rem
     color white !important
-    position fixed
-    top 60px
-    z-index 1000000
+    z-index 100
     .navbar-nav-soluciones
       flex-direction (inherit)
       .nav-link-soluciones
