--- a/templates/web/soluciones/item.html
+++ b/templates/web/soluciones/item.html
@@ -95,12 +95,23 @@
                                 <div class="mdb-lightbox">
                                     <div class="row">
                                         {% for imagen in imagenes_lista %}
+
+                                            {% if imagen.marca_agua == 1 %}
+                                                {% generateimage 'webpage:watermark' source=imagen.imagen as imagen_procesada %}
+                                            {% elif imagen.marca_agua == 2 %}
+                                                {% generateimage 'webpage:watermark_orange' source=imagen.imagen as imagen_procesada %}
+                                            {% else %}
+                                                {% generateimage 'webpage:normal' source=imagen.imagen as imagen_procesada %}
+                                            {% endif %}
+
                                             <figure class="col-4 col-md-2 p-1 m-0">
-                                                <a href="{{ imagen.imagen.url }}"
-                                                   data-size="{{ imagen.imagen.width|stringformat:"d" }}x{{ imagen.imagen.height|stringformat:"d" }}">
-                                                    <img src="{{ imagen.imagen_thumbnail.url }}"
-                                                         alt=""
-                                                    >
+                                                <a href="{{ imagen_procesada.url }}"
+                                                   data-size="{{ imagen_procesada.width|stringformat:"d" }}x{{ imagen_procesada.height|stringformat:"d" }}">
+                                                    <div class="view overlay hm-white-slight z-depth-2">
+                                                        <img src="{{ imagen.imagen_thumbnail.url }}"
+                                                             alt=""
+                                                        >
+                                                    </div>
                                                 </a>
                                                 <div class="caption">
                                                     <h3>
